--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Biel's Website</title>
-    <link rel="icon" href="/images/bollaB.jpg" />
+    <link rel="icon" href="/images/bolla.jpg" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
